--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		var midiAccess=null;	// the MIDIAccess object.
 		var oscillator=null;	// the single oscillator
 		var envelope=null;		// the envelope for the single oscillator
-		var attack=0.1;			// attack speed
+		var attack=0.05;			// attack speed
 		var release=0.1;		// release speed
 		var portamento=0.05;	// portamento/glide speed
 		var activeNotes = [];	// the stack of actively-pressed keys
@@ -110,6 +110,6 @@
 	</script>
 </head>
 <body>
-	This example uses Web MIDI input (from all available ports and channels) to drive a Web Audio monophonic synthesizer.  There is no UI.
+	This example uses Web MIDI input (from all available ports and channels) to drive a Web Audio monophonic synthesizer.  There is no UI.  <a href="http://github.com/cwilso/monosynth">Source available on github.</a>
 </body>
 </html>
