--- a/index.html
+++ b/index.html
@@ -54,12 +54,22 @@
 		function onMIDIInit(midi) {
 			midiAccess = midi;
 
+			if ((typeof(midiAccess.inputs) == "function")) {  //Old Skool MIDI inputs() code
 			var inputs=midiAccess.inputs();
 			if (inputs.length === 0)
 				alert("No MIDI input devices present.  You're gonna have a bad time.")
 			else { // Hook the message handler for all MIDI inputs
 				for (var i=0;i<inputs.length;i++)
 					inputs[i].onmidimessage = MIDIMessageEventHandler;
+			}
+			} else {  // new MIDIMap implementation
+				var haveAtLeastOneDevice=false;
+			    for (var input of midiAccess.inputs.values()) {
+			    	input.onmidimessage = MIDIMessageEventHandler;
+			    	haveAtLeastOneDevice = true;
+			    }
+			    if (!haveAtLeastOneDevice)
+					alert("No MIDI input devices present.  You're gonna have a bad time.");
 			}
 		}
 
