--- a/index.html
+++ b/index.html
@@ -55,17 +55,18 @@
 			midiAccess = midi;
 
 			if ((typeof(midiAccess.inputs) == "function")) {  //Old Skool MIDI inputs() code
-			var inputs=midiAccess.inputs();
-			if (inputs.length === 0)
-				alert("No MIDI input devices present.  You're gonna have a bad time.")
-			else { // Hook the message handler for all MIDI inputs
-				for (var i=0;i<inputs.length;i++)
-					inputs[i].onmidimessage = MIDIMessageEventHandler;
-			}
+				var inputs=midiAccess.inputs();
+				if (inputs.length === 0)
+					alert("No MIDI input devices present.  You're gonna have a bad time.")
+				else { // Hook the message handler for all MIDI inputs
+					for (var i=0;i<inputs.length;i++)
+						inputs[i].onmidimessage = MIDIMessageEventHandler;
+				}
 			} else {  // new MIDIMap implementation
 				var haveAtLeastOneDevice=false;
-			    for (var input of midiAccess.inputs.values()) {
-			    	input.onmidimessage = MIDIMessageEventHandler;
+			    var inputs=midiAccess.inputs.values();
+			    for ( var input = inputs.next(); input && !input.done; input = inputs.next()) {
+			    	input.value.onmidimessage = MIDIMessageEventHandler;
 			    	haveAtLeastOneDevice = true;
 			    }
 			    if (!haveAtLeastOneDevice)
