Fix URL to avoid mixed content warning

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Web MIDI monosynth using Web Audio</title>
 
 	<!-- Set up Web MIDI polyfill -->
-    <script src='//cwilso.github.com/WebMIDIAPIShim/lib/WebMIDIAPI.js'></script>
+    <script src='https://cwilso.github.com/WebMIDIAPIShim/lib/WebMIDIAPI.js'></script>
 
 	<script>
 		/* Copyright 2013 Chris Wilson
